<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/login_logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="@dimen/login_layout_margin"
        android:layout_marginEnd="@dimen/login_layout_margin"
        app:srcCompat="@mipmap/ic_launcher" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_text_clic_farm"
        app:layout_constraintTop_toBottomOf="@id/login_logo"
        app:layout_constraintBottom_toTopOf="@id/login_welcome_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="6dp"
        android:layout_marginStart="@dimen/login_layout_margin"
        android:layout_marginEnd="@dimen/login_layout_margin"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/login_logo_text"
        app:layout_constraintBottom_toTopOf="@id/login_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="32dp"
        android:layout_marginStart="@dimen/login_layout_margin"
        android:layout_marginEnd="@dimen/login_layout_margin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_welcome_text"
        app:layout_constraintBottom_toTopOf="@id/login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:windowSoftInputMode="adjustResize"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/login_layout_margin"
        android:layout_marginEnd="@dimen/login_layout_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_email"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:windowSoftInputMode="adjustResize"
        android:layout_marginStart="@dimen/login_layout_margin"
        android:layout_marginEnd="@dimen/login_layout_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="48dp"
        android:layout_marginStart="@dimen/login_layout_margin"
        android:layout_marginEnd="@dimen/login_layout_margin"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="1.0.0"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="3dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>